src/test/resources/purescript_examples/failing/OrphanInstance.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith OrphanInstance\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Test')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Class')
          PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSGenericIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('cBoolean')
          PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('Boolean')
                PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PSValueDeclarationImpl(ValueDeclaration)
          PsiElement(identifier)('op')
          PsiElement(whitespace)(' ')
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
          PSNamedBinderImpl(NamedBinder)
            <empty list>
          PsiElement(=)('=')
          PsiElement(whitespace)(' ')
          PSValueImpl(Value)
            PSPrefixValueImpl(PrefixValue)
              PSVarImpl(Var)
                PSQualifiedImpl(Qualified)
                  PsiElement(identifier)('a')
                  PsiElement(whitespace)('\n')
